test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/starchat/mutants/6/result.txt
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/starchat/mutants/6/Solution.java:32: error: unreachable statement
        while (k > 0) {
        ^
1 error
